--- a/CVMakerApp/templates/navbar.html
+++ b/CVMakerApp/templates/navbar.html
@@ -1,4 +1,4 @@
-<div class="bg-success d-flex justify-content-center bg-opacity-50 text-white 20rem">
-    <span class="text-center" style="font-size: 4vh;">CREATE YOUR CV</span>
+<div class="p-2 bg-dark d-flex justify-content-center bg-opacity-75 text-white">
+    <span style="font-size: 4vh;">CREATE YOUR CV</span>
 </div>
   
