--- a/CVMakerApp/templates/home.html
+++ b/CVMakerApp/templates/home.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,12 +9,41 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
-    
+
     <title>Hello, world!</title>
   </head>
   <body>
     {% include 'navbar.html' %}
     {% block content %}
     {% endblock %}  
+    <br>
+    <br>
+    <div class="d-flex justify-content-center">
+        <span style="font-size: 4vh;" class="text-body text-opacity-75">CHOOSE YOUR TEMPLATE</span>
+    </div>
+    <br>
+    <br>
+    <div class="">
+        <div class="row row-cols-1 row-cols-lg-3">
+          <div class="col d-flex justify-content-center algin-items-center ">
+            <img src="{% static '../static/img/CV6.svg' %}" alt="My Image" width="500" class="border border-dark p-1 border-opacity-75 mb-2">
+          </div>
+          <div class="col d-flex justify-content-center algin-items-center">
+            <img src="{% static '../static/img/CV2.svg' %}" alt="My Image" width="500" class="border border-dark p-1 border-opacity-75 mb-2">
+          </div>
+          <div class="col d-flex justify-content-center algin-items-center">
+            <img src="{% static '../static/img/CV3.svg' %}" alt="My Image" width="500" class="border border-dark p-1 border-opacity-75 mb-2">
+          </div>
+          <div class="col d-flex justify-content-center algin-items-center">
+            <img src="{% static '../static/img/CV4.svg' %}" alt="My Image" width="500" class="border border-dark p-1 border-opacity-75 mb-2">
+          </div>
+          <div class="col d-flex justify-content-center algin-items-center">
+            <img src="{% static '../static/img/CV5.svg' %}" alt="My Image" width="500" class="border border-dark p-1 border-opacity-75 mb-2">
+          </div>
+          <div class="col d-flex justify-content-center algin-items-center">
+            <img src="{% static '../static/img/CV1.svg' %}" alt="My Image" width="500" class="border border-dark p-1 border-opacity-75 mb-2">
+          </div>
+        </div>
+      </div>
   </body>
 </html>
