--- a/CVMakerApp/templates/home.html
+++ b/CVMakerApp/templates/home.html
@@ -26,7 +26,7 @@
     <div class="">
         <div class="row row-cols-1 row-cols-lg-3">
           <div class="col d-flex justify-content-center algin-items-center ">
-            <img src="{% static '../static/img/CV6.svg' %}" alt="My Image" width="500" class="border border-dark p-1 border-opacity-75 mb-2">
+            <a href="{% url 'create' '1'%}"><img src="{% static '../static/img/CV6.svg' %}" alt="My Image" width="500" class="border border-dark p-1 border-opacity-50 mb-2"></a>
           </div>
           <div class="col d-flex justify-content-center algin-items-center">
             <img src="{% static '../static/img/CV2.svg' %}" alt="My Image" width="500" class="border border-dark p-1 border-opacity-75 mb-2">
